Basic EDN editor with AST reflexion and diffing

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -14,6 +14,8 @@
     </head>
     <body>
         <h1>Hyperfiddle</h1>
+        <ul>
+            <li><a href="edn_view/edn_view.html">EDN View</a></li>
+        </ul>
     </body>
-    <script type="text/javascript" src="js/boot_ws.js"></script>
 </html>
