Fix advanced compilation

--- a/resources/public/edn_view/edn_view.html
+++ b/resources/public/edn_view/edn_view.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html style="height:100%">
     <head>
+        <meta charset="utf-8"/>
         <title>EDN View Prototype</title>
     </head>
     <body style="height:100%; margin:0; padding:0;">
