--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -12,12 +12,12 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="msapplication-config" content="/icons/browserconfig.xml">
         <meta name="theme-color" content="#ffffff">
+
+        <link rel="stylesheet" href="/assets/main.min.css" type="text/css" media="screen" />
     </head>
-    <body style="height:100%; margin:0; padding:0;">
-        <div style="display:flex; flex-direction: column; width: 100%; height: 100%">
-            <div id="hf-edn-view-route" style="min-height: 2.5rem; box-shadow: 0 0 1rem darkgray"></div>
-            <div id="hf-edn-view-output" style="flex:1;"></div>
-        </div>
+    <body class="tw-flex tw-flex-col">
+        <div id="hf-edn-view-route" style="min-height: 2.5rem; box-shadow: 0 0 1rem darkgray"></div>
+        <div id="hf-edn-view-output" style="flex:1;"></div>
         <!-- <div id="docs"> </div> -->
 
         <div id="hf-edn-test-view"> </div>
