--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -23,7 +23,7 @@
         <div id="hf-edn-test-view"> </div>
         <script type="text/javascript" src="/assets/js/main.js"></script>
         <script type="text/javascript">
-         hyperfiddle.client.edn_view.boot_BANG_();
+         hyperfiddle.client.main(console.log, console.error);
         </script>
     </body>
 </html>
