--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -21,6 +21,7 @@
         <!-- <div id="docs"> </div> -->
 
         <div id="hf-edn-test-view"> </div>
+        <script type="text/javascript" src="/assets/js/shared.js"></script>
         <script type="text/javascript" src="/assets/js/main.js"></script>
         <script type="text/javascript">
          hyperfiddle.client.main(console.log, console.error);
