WIP on hfql.q2, dataflow UI

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -15,10 +15,12 @@
 
         <link rel="stylesheet" href="/assets/main.min.css" type="text/css" media="screen" />
     </head>
-    <body class="tw-flex tw-flex-col">
+    <body class="tw-flex tw-flex-col tw-pt-32">
         <div id="hf-edn-view-route" style="min-height: 2.5rem; box-shadow: 0 0 1rem darkgray"></div>
         <div id="hf-edn-view-output" style="flex:1;"></div>
         <!-- <div id="docs"> </div> -->
+
+        <div id="hf-ui-root"></div>
 
         <div id="hf-edn-test-view"> </div>
         <script type="text/javascript" src="/assets/js/shared.js"></script>
