WIP on UI and DAG identity

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -23,6 +23,15 @@
         <div id="hf-ui-root"></div>
         <div id="hf-ui-dev-root"></div>
 
+        <input list="test-input" name="" type="text" value=""/>
+        <datalist id="test-input">
+            <option value="Edge"></option>
+            <option value="Firefox"></option>
+            <option value="Chrome"></option>
+            <option value="Opera"></option>
+            <option value="Safari"></option>
+        </datalist>
+
         <div id="hf-edn-test-view"> </div>
         <script type="text/javascript" src="/assets/js/shared.js"></script>
         <script type="text/javascript" src="/assets/js/main.js"></script>
