fix shared state reagent example

--- a/resources/public/photon/photon.html
+++ b/resources/public/photon/photon.html
@@ -10,7 +10,7 @@
         <script type="text/javascript" src="./js/shared.js"></script>
         <script type="text/javascript" src="./js/main.js"></script>
         <script type="text/javascript">
-         /* hyperfiddle.client.main(console.log, console.error); */
+          hyperfiddle.client.photon.main(console.log, console.error);
         </script>
     </body>
 </html>
