--- a/resources/public/examples/index.html
+++ b/resources/public/examples/index.html
@@ -34,6 +34,11 @@
     <body>
 
         <div class="card">
+            <h1>Clock</h1>
+            <div id="clock" class="card-body"></div>
+        </div>
+
+        <div class="card">
             <h1>Reagent1</h1>
 
             <div id="reagent1" class="card-body"></div>
