Todomvc with distribution, wip

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -37,7 +37,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/12.2.0/markdown-it.min.js" integrity="sha512-cTQeM/op796Fp1ZUxfech8gSMLT/HvrXMkRGdGZGQnbwuq/obG0UtcL04eByVa99qJik7WlnlQOr5/Fw5B36aw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script type="text/javascript" src="/assets/examples/card.js"> </script>
         <script type="text/javascript">
-         hyperfiddle.client.main(console.log, console.error);
+         var reactor = hyperfiddle.client.main(console.log, console.error);
         </script>
     </body>
 </html>
