--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -15,6 +15,7 @@
 
         <!-- <link rel="stylesheet" href="/assets/main.min.css" type="text/css" media="screen" /> -->
         <link rel="stylesheet" href="/assets/examples/card.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="/assets/hfql.css" type="text/css" media="screen" />
     </head>
     <body class="tw-flex tw-flex-col tw-pt-32">
         <div style="display:none;">
