--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -16,17 +16,13 @@
         <link rel="stylesheet" href="/assets/hfql.css" type="text/css" media="screen" />
         <link rel="stylesheet" href="/assets/browser.css" type="text/css" media="screen" />
     </head>
-    <body class="tw-flex tw-flex-col tw-pt-32">
-
+    <body>
         <div id="hf-ui-dev-root"></div>
 
         <script type="text/javascript" src="/assets/js/shared.js"></script>
         <script type="text/javascript" src="/assets/js/main.js"></script>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/12.2.0/markdown-it.min.js" integrity="sha512-cTQeM/op796Fp1ZUxfech8gSMLT/HvrXMkRGdGZGQnbwuq/obG0UtcL04eByVa99qJik7WlnlQOr5/Fw5B36aw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script type="text/javascript" src="/assets/examples/card.js"> </script>
         <script type="text/javascript">
-         /* var reactor = hyperfiddle.client.main(console.log, console.error); */
          hyperfiddle.client.start_BANG_();
         </script>
     </body>
