[devkit] entrypoint cleanup

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -17,13 +17,13 @@
         <link rel="stylesheet" href="/assets/browser.css" type="text/css" media="screen" />
     </head>
     <body>
-        <div id="hf-ui-dev-root"></div>
+        <div id="root"></div>
 
         <script type="text/javascript" src="/assets/js/shared.js"></script>
         <script type="text/javascript" src="/assets/js/main.js"></script>
 
         <script type="text/javascript">
-         hyperfiddle.client.start_BANG_();
+         user.entrypoint.start_BANG_();
         </script>
     </body>
 </html>
