--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -23,7 +23,12 @@
         <script type="text/javascript" src="/assets/js/main.js"></script>
 
         <script type="text/javascript">
-         user.entrypoint.start_BANG_();
+            switch (window.location.hash){
+                case '#user.hytradboi' : user.entrypoint.main = user.hytradboi.entrypoint;
+                    break;
+                default: user.entrypoint.main = user.orders_ui.entrypoint;
+            }
+            user.entrypoint.start_BANG_();
         </script>
     </body>
 </html>
