--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,23 +3,27 @@
     <head>
         <meta charset="utf-8"/>
         <title>Hyperfiddle</title>
-        <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
-        <link rel="manifest" href="/assets/icons/site.webmanifest">
-        <link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#5bbad5">
-        <link rel="shortcut icon" href="/assets/icons/favicon.ico">
+        <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+        <link rel="manifest" href="icons/site.webmanifest">
+        <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="shortcut icon" href="icons/favicon.ico">
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="msapplication-config" content="/icons/browserconfig.xml">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="stylesheet" href="/assets/hfql.css" type="text/css" media="screen" />
-        <link rel="stylesheet" href="/assets/browser.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="hfql.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="browser.css" type="text/css" media="screen" />
     </head>
     <body>
         <div id="root"></div>
 
-        <script type="text/javascript" src="/assets/js/shared.js"></script>
-        <script type="text/javascript" src="/assets/js/main.js"></script>
+        <script>
+            window.hyperfiddle_photon_config = {server_url: "ws://localhost:8081/ws"};
+        </script>
+
+        <script type="text/javascript" src="/js/shared.js"></script>
+        <script type="text/javascript" src="/js/main.js"></script>
     </body>
 </html>
