`user` ns is the devkit

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -24,5 +24,9 @@
         </script>
 
         <script type="text/javascript" src="/js/main.js"></script>
+
+        <script>
+            user.start_BANG_();
+        </script>
     </body>
 </html>
