Drop Reconnecting WS npm deps

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -20,7 +20,7 @@
         <div id="root"></div>
 
         <script>
-            window.hyperfiddle_photon_config = {server_url: "ws://localhost:8081/ws"};
+            window.hyperfiddle_photon_config = {server_url: "ws://"+ location.hostname +":8081/ws"};
         </script>
 
         <script type="text/javascript" src="/js/main.js"></script>
