codemirror editor example

--- a/resources/public/editor.html
+++ b/resources/public/editor.html
@@ -24,6 +24,7 @@
              grid-auto-flow: columns;
              grid-template-columns: 1fr 1fr;
              grid-row:2;
+             background-color: white;
          }
          .pannel {
              width:100%;
