photon-dom tests runnable at the REPL

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -19,6 +19,7 @@
     <body>
         <div id="root"></div>
 
+        <div id="test-bench"></div>
         <script type="text/javascript" src="/js/main.js"></script>
     </body>
 </html>
