--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -15,6 +15,7 @@
 
         <link rel="stylesheet" href="hfql.css" type="text/css" media="screen" />
         <link rel="stylesheet" href="browser.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="photon_ui.css" type="text/css" media="screen" />
     </head>
     <body>
         <div id="root"></div>
