--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -13,9 +13,7 @@
         <meta name="msapplication-config" content="/icons/browserconfig.xml">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="stylesheet" href="hfql.css" type="text/css" media="screen" />
-        <link rel="stylesheet" href="browser.css" type="text/css" media="screen" />
-        <link rel="stylesheet" href="photon_ui.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="index.css" type="text/css" media="screen" />
     </head>
     <body>
         <div id="root"></div>
