WIP on hfql tree to grid demo

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -14,6 +14,7 @@
         <meta name="theme-color" content="#ffffff">
 
         <link rel="stylesheet" href="index.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="hfql_tree_grid.css" type="text/css" media="screen" />
     </head>
     <body>
         <div id="root"></div>
