--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="hfql_tree_grid.css" type="text/css" media="screen" />
     </head>
     <body>
-        <div id="root"></div>
+        <div id="root" style="width:100%"></div>
 
         <div id="test-bench"></div>
         <script type="text/javascript" src="/js/main.js"></script>
